# drf-auth

./: README.md  db.sqlite3  pyproject.toml
coffehouseapi_project/: asgi.py  settings.py  urls.py  wsgi.py
coffehouseapp/: serializer.py  tests.py  urls.py
coffehouseapp/migrations/: 0001_initial.py
